--- a/.github/workflows/publish-to-keypop-doc.yml
+++ b/.github/workflows/publish-to-keypop-doc.yml
@@ -3,7 +3,7 @@ name: Trigger Centralized Documentation Update
 on:
   workflow_run:
     workflows:
-      - "pages build and deployment"
+      - "pages-build-deployment"
     types:
       - completed
   workflow_dispatch:
